tests/conformance/fail/borrow/double_move_string.ny
fn main() {
    let s = "hello"
    let t = s
    let u = s
    print(u)
}
